--- a/Server/.env
+++ b/Server/.env
@@ -1,2 +1,3 @@
-MONGO_URL=
+MONGO_URL=mongodb+srv://avneesh:avneesh@cluster0.5qu5exk.mongodb.net/testing?retryWrites=true&w=majority
 PORT=8080
+SECRET_KEY=apple
