--- a/Client/package.json
+++ b/Client/package.json
@@ -19,10 +19,11 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
-    "redux-thunk": "^2.4.2",
     "react-slick": "^0.29.0",
+    "redux-thunk": "^2.4.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.10",
+    "swiper": "^9.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
