--- a/Client/package.json
+++ b/Client/package.json
@@ -24,18 +24,18 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
+    "react-owl-carousel": "^2.3.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
-    "swiper": "^9.2.4",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.60.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.10",
+    "swiper": "^9.3.0",
     "vercel": "^28.18.3",
-
     "web-vitals": "^2.1.4"
   },
   "scripts": {
