--- a/Client/package.json
+++ b/Client/package.json
@@ -7,6 +7,7 @@
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@firebase/firestore": "^3.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -28,14 +29,13 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
-    "swiper": "^9.2.4",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.60.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.10",
+    "swiper": "^9.2.4",
     "vercel": "^28.18.3",
-
     "web-vitals": "^2.1.4"
   },
   "scripts": {
